# fastapi-stub

./: docker-compose.yml
server/: Dockerfile  alembic.ini  main.py  pyproject.toml
server/config/: app.py  dependencies.py  settings.py
server/db/: events.py
server/db/migrations/: env.py
server/db/models/: __init__.py  base.py
server/web/: app.py  events.py
server/web/api/: router.py
